--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
-    "seed:build": "tsc -p tsconfig.seed.json",
-    "seed": "pnpm seed:build && node dist-seed/prisma/seed.js"
+  "seed:build": "tsc -p tsconfig.seed.json",
+  "seed": "pnpm seed:build && node dist-seed/prisma/seed.js",
+  "prisma:generate": "prisma generate",
+  "postinstall": "pnpm prisma:generate"
   },
   "dependencies": {
     "@prisma/client": "^6.18.0",
