feat(core): finalize Task 1 — move prisma client; update seed/imports; finalize seed scripts

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,6 @@ DATABASE_URL="postgresql://postgres:devpassword@localhost:5432/mc_platform?schem
 
 # Will be used by NextAuth later
 NEXTAUTH_SECRET="changeme_later"
+
+# Optional seed admin password for development
+SEED_ADMIN_PASSWORD=admin123
