feat(users): Task 4 — admin creates teacher/student with zod validation

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,11 @@
 # Postgres connection string for local dev
 DATABASE_URL="postgresql://postgres:devpassword@localhost:5432/mc_platform?schema=public"
 
-# Will be used by NextAuth later
+# URL where NextAuth is running locally
+NEXTAUTH_URL="http://localhost:3000"
+
+# You MUST set this in your real .env (DO NOT COMMIT .env)
+# Generate something random for local dev, e.g. using `openssl rand -hex 32`
 NEXTAUTH_SECRET="changeme_later"
 
 # Optional seed admin password for development
