--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
-  "seed:build": "tsc --project tsconfig.seed.json --outDir dist-seed",
-  "seed": "node dist-seed/prisma/seed.js",
+    "seed:build": "tsc --project tsconfig.seed.json --outDir dist-seed",
+    "seed": "node dist-seed/prisma/seed.js",
     "prisma:generate": "prisma generate",
     "postinstall": "pnpm prisma:generate"
   },
@@ -16,8 +16,10 @@
     "@prisma/client": "^6.18.0",
     "bcrypt": "^6.0.0",
     "next": "16.0.0",
+    "next-auth": "^4.24.12",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
