--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
+    "test": "vitest run",
+    "test:watch": "vitest",
     "seed:build": "tsc --project tsconfig.seed.json --outDir dist-seed",
     "seed": "node dist-seed/prisma/seed.js",
     "prisma:generate": "prisma generate",
@@ -32,6 +34,7 @@
     "prisma": "^6.18.0",
     "tailwindcss": "^4",
     "ts-node": "^10.9.2",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vitest": "^4.0.6"
   }
 }
